--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,18 @@
 # Cache and logs (Symfony2)
 /app/cache/*
 /app/logs/*
+/app/data/*
 !app/cache/.gitkeep
 !app/logs/.gitkeep
+!app/data/.gitkeep
 
 # Cache and logs (Symfony3)
 /var/cache/*
 /var/logs/*
+/var/data/*
 !var/cache/.gitkeep
 !var/logs/.gitkeep
+!var/data/.gitkepp
 
 # Parameters
 /app/config/parameters.yml
@@ -25,6 +29,8 @@
 # Assets and user uploads
 /web/bundles/
 /web/uploads/
+!/web/bundles/.gitkeep
+!/web/uploads/.gitkeep
 
 # PHPUnit
 /app/phpunit.xml
