--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -9,3 +9,6 @@ services:
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
     app.utils:
         class: AppBundle\Utils
+
+    app.banner_controller:
+        class: AppBundle\Controller\BannerController
